# spectre

./: annotated.html  classes.html  hierarchy.html  namespacecontrol__system_1_1size.html  namespaces.html  navtreedata.js  navtreeindex10.js  navtreeindex11.js  navtreeindex12.js  navtreeindex13.js  navtreeindex14.js  navtreeindex3.js  navtreeindex4.js  navtreeindex6.js  structcontrol__system_1_1Systems_1_1Size.html  structcontrol__system_1_1protocols_1_1ControlSystem.html
cmake/: SetupSpec.cmake
src/Evolution/Executables/FixedScalarTensor/FixedDecoupledScalar/: CMakeLists.txt  EvolveFixedDecoupledScalar.cpp  EvolveFixedDecoupledScalar.hpp  EvolveFixedDecoupledScalarBinaryBlackHole.cpp  EvolveFixedDecoupledScalarBinaryBlackHole.hpp  EvolveFixedDecoupledScalarSingleBlackHole.cpp  EvolveFixedDecoupledScalarSingleBlackHole.hpp  FixedScalarTensorBase.hpp
src/Evolution/Executables/FixedScalarTensor/FixedSGB/: CMakeLists.txt  EvolveFixedSgbBinaryBlackHole.cpp  EvolveFixedSgbBinaryBlackHole.hpp  EvolveFixedSgbSingleBlackHole.cpp  EvolveFixedSgbSingleBlackHole.hpp  FixedScalarTensorBase.hpp
src/Evolution/Executables/ScalarTensor/: CMakeLists.txt  EvolveScalarTensor.hpp  EvolveScalarTensorBinaryBlackHole.cpp  EvolveScalarTensorBinaryBlackHole.hpp  EvolveScalarTensorFwd.hpp  EvolveScalarTensorSingleBlackHole.cpp  EvolveScalarTensorSingleBlackHole.hpp  ScalarTensorBase.hpp
src/Evolution/Systems/CurvedScalarWave/Sources/: CMakeLists.txt  CurvatureSource.cpp  CurvatureSource.hpp  SourceTerm.cpp  SourceTerm.hpp  Tags.hpp
src/Evolution/Systems/FixedScalarTensor/FixedDecoupledScalar/: CMakeLists.txt  Characteristics.hpp  Diagnostics.hpp  Initialize.hpp  System.hpp  Tags.hpp  TimeDerivativeTerms.hpp  VolumeTermsInstantiation.cpp
src/Evolution/Systems/FixedScalarTensor/FixedDecoupledScalar/BoundaryConditions/: BoundaryCondition.cpp  BoundaryCondition.hpp  ConstraintPreservingAnalyticConstant.cpp  ConstraintPreservingAnalyticConstant.hpp  Factory.hpp  ProductOfConditions.hpp
src/Evolution/Systems/FixedScalarTensor/FixedDecoupledScalar/BoundaryCorrections/: BoundaryCorrection.hpp  Factory.hpp  ProductOfCorrections.hpp  RegisterDerived.cpp  RegisterDerived.hpp
src/Evolution/Systems/FixedScalarTensor/FixedDecoupledScalar/ConstraintDamping/: ConstraintGammas.hpp  DampingFunction.hpp  GaussianPlusConstant.cpp  GaussianPlusConstant.hpp  RegisterDerivedWithCharm.cpp  RegisterDerivedWithCharm.hpp  Tags.hpp  TimeDependentTripleGaussian.cpp  TimeDependentTripleGaussian.hpp
src/Evolution/Systems/FixedScalarTensor/FixedDecoupledScalar/Sources/: ComplexPotential.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarDriver/: CMakeLists.txt  Characteristics.cpp  Characteristics.hpp  Constraints.hpp  Diagnostics.cpp  Diagnostics.hpp  Initialize.hpp  PsiSquared.hpp  Sources.cpp  Sources.hpp  System.hpp  Tags.hpp  TimeDerivative.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarDriver/Actions/: CMakeLists.txt  InitializeConstraintGammas.cpp  InitializeConstraintGammas.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarDriver/BoundaryConditions/: AnalyticConstant.cpp  AnalyticConstant.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  CMakeLists.txt  ConstraintPreservingSphericalRadiation.cpp  ConstraintPreservingSphericalRadiation.hpp  DemandOutgoingCharSpeeds.cpp  DemandOutgoingCharSpeeds.hpp  Factory.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarDriver/BoundaryCorrections/: BoundaryCorrection.hpp  CMakeLists.txt  Factory.hpp  RegisterDerived.cpp  RegisterDerived.hpp  UpwindPenalty.cpp  UpwindPenalty.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarTensorDriver/: CMakeLists.txt  Characteristics.cpp  Characteristics.hpp  Diagnostics.cpp  Diagnostics.hpp  Sources.cpp  Sources.hpp  System.hpp  Tags.hpp  TimeDerivative.cpp  TimeDerivative.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarTensorDriver/BoundaryConditions/: AnalyticConstant.cpp  AnalyticConstant.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  CMakeLists.txt  DemandOutgoingCharSpeeds.cpp  DemandOutgoingCharSpeeds.hpp  Factory.hpp
src/Evolution/Systems/FixedScalarTensor/ScalarTensorDriver/BoundaryCorrections/: BoundaryCorrection.hpp  Factory.hpp  RegisterDerived.cpp  RegisterDerived.hpp  UpwindPenalty.cpp  UpwindPenalty.hpp
src/Evolution/Systems/ScalarTensor/Sources/: CMakeLists.txt  ScalarSource.cpp  ScalarSource.hpp  Tags.hpp
src/Evolution/Systems/ScalarTensor/TwoScalars/: CMakeLists.txt  StressEnergy.cpp  StressEnergy.hpp  System.hpp  Tags.hpp  TimeDerivative.cpp  TimeDerivative.hpp  VolumeTermsInstantiation.cpp
src/PointwiseFunctions/AnalyticData/CurvedWaveEquation/: CMakeLists.txt  NoiseFloorScalar.cpp  NoiseFloorScalar.hpp
src/PointwiseFunctions/AnalyticData/FixedScalarTensor/FixedDecoupledScalar/: AnalyticData.hpp  CMakeLists.txt  KerrSphericalHarmonic.cpp  KerrSphericalHarmonic.hpp  MinkowskiZeroScalar.hpp  SphericalKerrSchildSH.cpp  SphericalKerrSchildSH.hpp
src/PointwiseFunctions/AnalyticSolutions/FixedScalarTensor/FixedDecoupledScalar/: CMakeLists.txt  KerrSchildScalar.cpp  KerrSchildScalar.hpp  KerrSphericalHarmonic.cpp  KerrSphericalHarmonic.hpp  MinkowskiZeroScalar.cpp  MinkowskiZeroScalar.hpp  Solutions.hpp  SphericalKerrSchildSH.cpp  SphericalKerrSchildSH.hpp
src/PointwiseFunctions/AnalyticSolutions/ScalarTensor/: CMakeLists.txt  GaugeWaveConstantScalar.cpp  GaugeWaveConstantScalar.hpp  GaugeWaveScalarWave.cpp  GaugeWaveScalarWave.hpp  KerrSchildScalar.cpp  KerrSchildScalar.hpp  KerrSphericalHarmonic.cpp  KerrSphericalHarmonic.hpp  MinkowskiScalarWave.cpp  MinkowskiScalarWave.hpp  MinkowskiZeroScalar.cpp  MinkowskiZeroScalar.hpp  Solutions.hpp  SphericalKerrSchildSH.cpp  SphericalKerrSchildSH.hpp  StressEnergy.cpp  StressEnergy.hpp
src/PointwiseFunctions/ScalarTensor/: CMakeLists.txt  GBScalarSourceTerms.cpp  GBScalarSourceTerms.hpp  GBTensorSourceTerms.cpp  GBTensorSourceTerms.hpp  ScalarCharge.cpp  ScalarCharge.hpp  WeylElectricRicciPart.cpp  WeylElectricRicciPart.hpp
tests/Unit/PointwiseFunctions/AnalyticSolutions/GhScalarTensor/: CMakeLists.txt  Test_InstantiateWrappedGr.cpp
(+2601 files in other folders)
