# Distributed under the MIT License.
# See LICENSE.txt for details.

set(LIBS_TO_LINK
  Charmxx::main
  CoordinateMaps
  DiscontinuousGalerkin
  Domain
  DomainCreators
  EventsAndDenseTriggers
  EventsAndTriggers
  Evolution
  GeneralRelativity
  GeneralRelativityAnalyticData
  GeneralRelativitySolutions
  GeneralizedHarmonic
  Importers
  Informer
  Interpolation
  LinearOperators
  MathFunctions
  Observer
  Options
  Parallel
  ParallelInterpolation
  PhaseControl
  Serialization
  Time
  Utilities
  #
  CurvedScalarWave
  CurvedWaveEquationAnalyticData
  ScalarTensor
  ScalarTensorPointwise
  ScalarTensorAnalyticData
  GhScalarTensorAnalyticData
  ScalarDriver
  FixedDecoupledScalar
  FixedDecoupledScalarAnalyticData
  GhFixedScalarTensorAnalyticData
  )

set(SINGLE_BH_EXECUTABLE EvolveFixedDecoupledScalarSingleBlackHole)
add_spectre_executable(
  ${SINGLE_BH_EXECUTABLE}
  EXCLUDE_FROM_ALL
  EvolveFixedDecoupledScalarSingleBlackHole.cpp
  )
target_compile_definitions(
  ${SINGLE_BH_EXECUTABLE}
  PRIVATE
  DIM=3
  USE_NUMERICAL_ID=False
  )
target_link_libraries(
  ${SINGLE_BH_EXECUTABLE}
  PRIVATE
  ${LIBS_TO_LINK}
  ApparentHorizonFinder
  ControlSystem
  )
